<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="@dimen/mainactivity_margin"
          android:layout_marginEnd="@dimen/mainactivity_margin"
          android:baselineAligned="false"
          android:weightSum="10">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editDate"
        android:layout_column="0"
        android:hint="@string/date"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:maxLength="2"
        android:visibility="visible"
        android:layout_weight="1"
        android:gravity="start"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textDate"
        android:layout_column="0"
        android:gravity="start|center_vertical"
        android:visibility="gone"
        android:layout_weight="1"
        android:ems="2"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editRef"
        android:layout_column="1"
        android:hint="@string/reference"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:gravity="center"
        android:visibility="visible"
        android:layout_weight="3"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textRef"
        android:layout_column="1"
        android:gravity="center"
        android:visibility="gone"
        android:layout_weight="3"
        android:ems="4"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editCredit"
        android:layout_column="2"
        android:hint="@string/credit"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:visibility="visible"
        android:layout_weight="2"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textCredit"
        android:layout_column="2"
        android:gravity="center"
        android:visibility="gone"
        android:layout_weight="2"
        android:ems="3"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editDebit"
        android:layout_column="3"
        android:hint="@string/debit"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:visibility="visible"
        android:layout_weight="2"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textDebit"
        android:layout_column="3"
        android:gravity="center"
        android:visibility="gone"
        android:layout_weight="2"
        android:ems="3"
        android:maxLines="1"
        android:textSize="@dimen/normal"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textBalance"
        android:layout_column="4"
        android:maxLines="1"
        android:layout_weight="2"
        android:gravity="center_vertical|end"
        android:ems="3"
        android:textSize="@dimen/normal"/>
</TableRow>