...
                android:maxLines="1"
                android:textSize="@dimen/title"
                android:layout_width="match_parent"
                android:textStyle="normal|bold"/>

            <com.emmanuelmess.simpleaccounting.activities.views.LedgerView
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textMonth"/>

...
