...
    android:background="@color/background_edit_fragment"
    android:clickable="true"
    android:focusable="true"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginEnd="@dimen/mainactivity_margin"
        android:layout_marginStart="@dimen/mainactivity_margin"
        android:background="@color/white"
...
